--- a/app/src/main/res/layout/activity_home_fragment.xml
+++ b/app/src/main/res/layout/activity_home_fragment.xml
@@ -47,4 +47,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
+    <Button
+        android:id="@+id/buttonSupportConnection"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Support Resource"
+        app:layout_constraintTop_toBottomOf="@+id/buttonManageItems"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
