--- a/app/src/main/res/layout/fragment_scroller.xml
+++ b/app/src/main/res/layout/fragment_scroller.xml
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/questionText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Content" />
