--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,11 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.483" >
 
+        <Button
+            android:id="@+id/infoStorageButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Information Storage" />
     </FrameLayout>
 
     <TextView
