Complete Information Storage

--- a/app/src/main/res/layout/activity_info_storage.xml
+++ b/app/src/main/res/layout/activity_info_storage.xml
@@ -13,5 +13,6 @@
         android:layout_height="wrap_content"
         android:text="Button"
         tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="341dp" />
+        tools:layout_editor_absoluteY="341dp"
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
