--- a/app/src/main/res/layout/activity_document.xml
+++ b/app/src/main/res/layout/activity_document.xml
@@ -23,5 +23,27 @@
         android:layout_margin="16dp"
         app:srcCompat="@android:drawable/ic_menu_upload"
         android:contentDescription="Upload File" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/deleteFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_margin="16dp"
+        android:contentDescription="Delete File"
+        app:srcCompat="@drawable/ic_delete" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/renameFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="16dp"
+        android:contentDescription="Rename File"
+        app:srcCompat="@drawable/ic_edit" />
+
+
 </RelativeLayout>
 
