--- a/app/src/main/res/layout/document_item.xml
+++ b/app/src/main/res/layout/document_item.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:padding="12dp"
-    android:background="@android:color/white"
-    android:layout_margin="6dp"
-    android:elevation="2dp">
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:background="@drawable/contact_normal_border"
+android:orientation="vertical"
+android:padding="12dp"
+android:layout_margin="6dp">
 
-    <TextView
-        android:id="@+id/documentName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Document Name"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black" />
+<TextView
+    android:id="@+id/documentName"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Document Name"
+    android:textColor="@android:color/black"
+    android:textSize="16sp"
+    android:textStyle="bold" />
 </LinearLayout>
+
 
 
