--- a/app/src/main/res/layout/activity_home_fragment.xml
+++ b/app/src/main/res/layout/activity_home_fragment.xml
@@ -12,10 +12,23 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Questionnaire"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCategory"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/buttonCategory"/>
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/Tips"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Tips"
+        app:layout_constraintBottom_toTopOf="@+id/buttonCategory"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.814" />
 
     <Button
         android:id="@+id/buttonCategory"
@@ -42,9 +55,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Support Resource"
-        app:layout_constraintTop_toBottomOf="@+id/buttonReminder"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonReminder" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
