--- a/app/src/main/res/layout/activity_pin_setup.xml
+++ b/app/src/main/res/layout/activity_pin_setup.xml
@@ -1,33 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:padding="24dp">
+    android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/pinInput"
-        android:hint="Enter PIN (4 or 6 digits)"
-        android:inputType="numberPassword"
-        android:maxLength="6"
+    <LinearLayout
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="24dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/confirmPinInput"
-        android:hint="Confirm PIN"
-        android:inputType="numberPassword"
-        android:maxLength="6"
-        android:layout_width="match_parent"
+        <EditText
+            android:id="@+id/pinInput"
+            android:hint="Enter PIN (4 or 6 digits)"
+            android:inputType="numberPassword"
+            android:maxLength="6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <EditText
+            android:id="@+id/confirmPinInput"
+            android:hint="Confirm PIN"
+            android:inputType="numberPassword"
+            android:maxLength="6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"/>
+
+        <Button
+            android:id="@+id/submitButton"
+            android:text="Set PIN"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"/>
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/exitButton"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"/>
-
-    <Button
-        android:id="@+id/submitButton"
-        android:text="Set PIN"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"/>
-</LinearLayout>
+        android:contentDescription="exit_app"
+        app:srcCompat="@drawable/ic_exit"
+        android:layout_gravity="top|end"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"/>
+</FrameLayout>
