--- a/app/src/main/res/layout/activity_pin_unlock.xml
+++ b/app/src/main/res/layout/activity_pin_unlock.xml
@@ -1,32 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center"
-    android:padding="24dp">
+    android:layout_height="match_parent">
 
-    <EditText
-        android:id="@+id/pinInput"
-        android:hint="Enter PIN"
-        android:inputType="numberPassword"
-        android:maxLength="6"
+    <!-- Your existing unlock form -->
+    <LinearLayout
+        android:orientation="vertical"
+        android:gravity="center"
+        android:padding="24dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/unlockButton"
-        android:text="Unlock"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"/>
+        <EditText
+            android:id="@+id/pinInput"
+            android:hint="Enter PIN"
+            android:inputType="numberPassword"
+            android:maxLength="6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
 
-    <TextView
-        android:id="@+id/useFirebaseLoginText"
-        android:text="Use Firebase Login"
-        android:textColor="@android:color/holo_blue_dark"
+        <Button
+            android:id="@+id/unlockButton"
+            android:text="Unlock"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"/>
+
+        <TextView
+            android:id="@+id/useFirebaseLoginText"
+            android:text="Use Firebase Login"
+            android:textColor="@android:color/holo_blue_dark"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"/>
+    </LinearLayout>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/exitButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"/>
-</LinearLayout>
+        android:contentDescription="exit_app"
+        app:srcCompat="@drawable/ic_exit"
+        android:layout_gravity="top|end"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"/>
+</FrameLayout>
